# ggl

./: .gitignore  LICENSE  README.md  __init__.py  arithmetic.py  circuit.py  component.py  config.toml  devbox.json  edge.py  error_messages.py  errors.py  ggl_logging.py  io.py  logic.py  memory.py  node.py  plexers.py  pyproject.toml  wires.py
.github/workflows/: test.yml
src/ggl/: __init__.py  arithmetic.py  callbacks.py  circuit.py  edge.py  errors.py  io.py  logic.py  memory.py  node.py  plexers.py  wires.py
tests/: test_callbacks.py  test_circuits.py  test_short_circuit.py
tests/ggl/: 0-nand-0.py  0-nor-0.py  1-and-1.py  1-not.py  1-or-0.py  1-xnor-0.py  1-xor-1.py  1bit-sign-extend.py  32bit-eq.py  32bit-splitter-merger.py  4bit-splitter-merger.py  8bit-counter.py  8bit-reg-clr-en.py  8bit-sign-extend.py  8bit-splitter-merger.py  adder-no-carryin.py  analyze_decode.py  analyze_decode_comp.py  and-3-inputs-inverted.py  and-3-inputs.py  attribute-syntax-arithmetic.py  attribute-syntax-memory.py  attribute-syntax-mixed.py  attribute-syntax-plexers.py  barrelshifter.py  bit-counter.py  clock.py  comparator.py  component.8bit-rca.py  component.bit-width-error.py  constant.py  d-flip-flop.py  d-latch-clr.py  decoder-4out.py  division.py  full-adder-component.py  ggl.toml  longrunning-and.py  memory.ram-2a-2d.py  multiply.py  (+24 more)
tests/ggl/scratch/: clock.py
